<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Marculator</string>
    <string name="action_settings">W?????????</string>

    <!-- activity_main (Home) Screen -->
    <string name="markulator">Markulator</string>
    <string name="templates">Templates</string>
    <string name="charts">Summary</string>
    <string name="inputMarks">Imput Marks</string>
    <string name="markulate">MARCULATE</string>
    <!-- end activity_main (Home) Screen -->

    <string name="title_activity_templates_screen">templatesScreen</string>
    <!-- activity_templates_screen -->
    <string name="button_add_course">Add</string>
    <string name="button_delete_course">Delete</string>
    <string name="button_import_course">Import</string>
    <string name="button_export_course">Export</string>
    <!-- end activity_templates_screen -->

    <string name="title_activity_course_details_screen">courseDetailsScreen</string>
    <!-- activity_course_details_screen -->
    <string name="course_name_label">Course: </string>
    <string name="course_name">Enter Course Name</string>
    <string name="category_label">Category: </string>

    <string name="item_name_label">Item Name: </string>
    <string name="item_name">Name the item </string>
    <string name="category_weight_label">% weight of final mark: </string>
    <string name="category_weight">Enter % weight </string>
    <string name="btn_new_item">New Course Item</string>
    <string name="btn_add_item">Add Item</string>
    <string name="btn_save">Save Course Details</string>
    <string name="btn_cancel">Cancel</string>
    <!-- end activity_course_details_screen -->

</resources>
