<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/blue_background"
    android:id="@+id/markulator">

    <TextView android:text="@string/markulator" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <!--Marculate Button-->
    <Button
        android:id="@+id/buttonHomeMarkulate"
        android:text="@string/markulate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="36dp"
        android:layout_above="@+id/buttonHomeImputMarks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="markulate_screen"/>

    <!--Summary button-->
    <Button
        android:id="@+id/buttonHomeCharts"
        android:text="@string/charts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonHomeImputMarks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:onClick="charts_screen"/>

    <!--ImputMarks button-->
    <Button
        android:id="@+id/buttonHomeImputMarks"
        android:text="@string/inputMarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="imput_marks_screen"/>


    <!-- templates set up courses button-->
    <Button
        android:id="@+id/buttonHomeTemplates"
        android:text="@string/templates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonHomeCharts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:onClick="templates_screen"
        />

</RelativeLayout>

